--- a/projects.html
+++ b/projects.html
@@ -246,6 +246,12 @@
         </section>
     </div>
 
+        <div class="cookiebanner" id="cookie-banner">
+        <h1>We use cookies</h1>
+        <p>To enhance the user experience and better michaeldors.com</p>
+        <p><a id="accept-cookies" class="glowbutton">Sounds Good</a> <a style="cursor:pointer; color:white; text-decoration: none;" href="privacy.html">Learn More</a></p>
+    </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
@@ -305,4 +311,43 @@
                 filters.classList.remove("superupfilterbar");
             }
         });
+
+        function setCookie(name, value, days) {
+        var expires = "";
+        if (days) {
+            var date = new Date();
+            date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+            expires = "; expires=" + date.toUTCString();
+        }
+        document.cookie = name + "=" + (value || "") + expires + "; path=/";
+    }
+    function getCookie(name) {
+        var nameEQ = name + "=";
+        var ca = document.cookie.split(';');
+        for (var i = 0; i < ca.length; i++) {
+            var c = ca[i];
+            while (c.charAt(0) == ' ') c = c.substring(1, c.length);
+            if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
+        }
+        return null;
+    }
+    function eraseCookie(name) {
+        document.cookie = name + '=; Path=/; Expires=Thu, 01 Jan 1970 00:00:01 GMT;';
+    }
+    document.addEventListener("DOMContentLoaded", function () {
+        var banner = document.getElementById("cookie-banner");
+        var acceptButton = document.getElementById("accept-cookies");
+
+        if (!getCookie("cookiesAccepted")) {
+            banner.style.display = "";
+        }
+        else{
+            banner.style.display = "none";
+        }
+
+        acceptButton.addEventListener("click", function () {
+            setCookie("cookiesAccepted", "True", "70")
+            banner.style.display = "none";
+        });
+    });
 </script>
