--- a/privacy.html
+++ b/privacy.html
@@ -83,11 +83,10 @@
     <Br>
     <br>
     <h2>Managing Cookies</h2>
-    <p>You can opt out of cookies in several ways:
+    <p>You can avoid cookies in several ways:
     <br>
-    - Opt of out analytical cookies on the consent banner.
       <br>
-      - Avoid using Countdown personal options to prevent any cookies from being placed on your device.
+      - Avoid using Countdown personal options to prevent cookies from being placed on your device.
       <br>
       - Use the Countdown "Reset All" option in the options menu to clear all personal options cookies, then reload the page.
       <br>
