--- a/privacy.html
+++ b/privacy.html
@@ -83,7 +83,7 @@
     <Br>
     <br>
     <h2>Managing Cookies</h2>
-    <p>You can avoid cookies in several ways:
+    <p>You can avoid optional cookies in several ways:
     <br>
       <br>
       - Avoid using Countdown personal options to prevent cookies from being placed on your device.
