--- a/privacy.html
+++ b/privacy.html
@@ -74,6 +74,7 @@
     <br>
     <h2>Use of Cookies</h2>
     <p>We utilize cookies to save your accessibility settings and other personal options in Countdown, which are only stored when enabled and deleted when disabled. Analytics cookies are used to track and report website traffic and usage statistics. These statistics are not personally identifiable and are utalized to make informed changes to our services.</p>
+    <a style="color:white" href="https://business.safety.google/privacy/">Click here to learn about Google's use of cookies.</a>
     <br>
     <Br>
     <br>
