--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <link rel="apple-touch-icon" href="Images/homescreen.png">
 </head>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-1DKXNCSFTP"></script>
 <script>
 function getCookie(name) {
         var nameEQ = name + "=";
@@ -36,6 +35,12 @@ function getCookie(name) {
     }
 
 if(getCookie("cookiesAccepted")){
+var script = document.createElement('script');
+script.setAttribute("async", "");
+script.src = "https://www.googletagmanager.com/gtag/js?id=G-1DKXNCSFTP";
+
+document.head.appendChild(script);
+    
     window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
