--- a/privacy.html
+++ b/privacy.html
@@ -22,13 +22,31 @@
     <link rel="apple-touch-icon" href="Images/homescreen.png">
 </head>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-1DKXNCSFTP"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
+function getCookie(name) {
+        var nameEQ = name + "=";
+        var ca = document.cookie.split(';');
+        for (var i = 0; i < ca.length; i++) {
+            var c = ca[i];
+            while (c.charAt(0) == ' ') c = c.substring(1, c.length);
+            if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
+        }
+        return null;
+    }
+
+if(getCookie("cookiesAccepted")){
+var script = document.createElement('script');
+script.setAttribute("async", "");
+script.src = "https://www.googletagmanager.com/gtag/js?id=G-1DKXNCSFTP";
+
+document.head.appendChild(script);
+    
+    window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'G-1DKXNCSFTP');
+    }
 </script>
 <body id="body" style="scroll-snap-type: none !important; color:white;">
     <nav id="navigation" class="navdown">
