--- a/canvas/editor.html
+++ b/canvas/editor.html
@@ -10,14 +10,32 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-1DKXNCSFTP"></script>
+    <!-- Google tag (gtag.js) -->
 <script>
-  window.dataLayer = window.dataLayer || [];
+function getCookie(name) {
+        var nameEQ = name + "=";
+        var ca = document.cookie.split(';');
+        for (var i = 0; i < ca.length; i++) {
+            var c = ca[i];
+            while (c.charAt(0) == ' ') c = c.substring(1, c.length);
+            if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
+        }
+        return null;
+    }
+
+if(getCookie("cookiesAccepted")){
+var script = document.createElement('script');
+script.setAttribute("async", "");
+script.src = "https://www.googletagmanager.com/gtag/js?id=G-1DKXNCSFTP";
+
+document.head.appendChild(script);
+    
+    window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'G-1DKXNCSFTP');
+    }
 </script>
 <body>
     <div class="uploadpopup">
