--- a/mcacountdown/closedbeta_integratedschedule.html
+++ b/mcacountdown/closedbeta_integratedschedule.html
@@ -279,7 +279,7 @@
         </div>
         <div class="clradd" onmouseup="addColorPicker()"><i class="fa-solid fa-plus"></i></div>
 
-        <p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px;">The clock will cycle through all text colors.
+        <p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px;">The foreground elements will cycle through the chosen colors.
             <br/>
 Keep contrast in mind when choosing colors.
         </p>
