--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -154,7 +154,10 @@
         <input class="colorpicker" id="color2" type="color" value="#3ab6ff" onblur="SetCountDowngeneral();" />
         <input class="colorpicker" id="color3" type="color" value="#00ff5e" onblur="SetCountDowngeneral();" />
         <input class="colorpicker" id="color4" type="color" value="#ff9900" onblur="SetCountDowngeneral();" />
-        <p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px;">Keep contrast in mind when choosing colors.</p>
+<p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px;">The clock will cycle through the chosen colors.
+            <br/>
+Keep contrast in mind when choosing colors.
+        </p>
         <br />
         <br />
         <br>
