--- a/mcacountdown/closedbeta_integratedschedule.html
+++ b/mcacountdown/closedbeta_integratedschedule.html
@@ -234,7 +234,7 @@
 
 
                 <input id="linkinput" class="input" />
-                <button style="background:#141414; color:white; border:none; outline:none; cursor:pointer">
+                <button style="background:transparent; color:white; border:none; outline:none; cursor:pointer">
                     <i class="fa fa-clone" style="transform:scale(1.75); padding-left:10px;" onclick="copyinputtextlink()"></i>
                 </button>
                 <br />
