--- a/mcacountdown/closedbeta_integratedschedule.html
+++ b/mcacountdown/closedbeta_integratedschedule.html
@@ -429,6 +429,18 @@
     <a id="minute" class="disabled" onclick="minute();"><i class="fa-solid fa-hourglass-start"></i> Minutes</a>
     <a id="second" class="disabled" onclick="second();"><i class="fa-solid fa-stopwatch-20"></i> Seconds</a>
     <a id="millisecond" class="disabled" onclick="millisecond();"><i class="fa-solid fa-meteor"></i> Milliseconds</a>
+    <br>
+    <br>
+    <br>
+    <h1 id="progressoptions">Ending Options <span class="betatag">BETA</span></h1>
+    <h2 id="inclusionoptions" class="textelement">Confetti Options</h2>
+    <br>
+    <br>
+    <br>
+    <h2 id="inclusionoptions" class="textelement">Ending Sound</h2>
+    <br>
+    <br>
+    <br>
 
     </center>
     </div>
