--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -1296,10 +1296,10 @@ border: 1px solid rgba(255, 0, 0, 0.64);
 
             .betabutton {
         font-family: 'Fredoka One';
-        background:linear-gradient(to bottom, #ac6cff, #6cd0fb, #79ffaa, #ffbe5d);
+        background: linear-gradient(#8c52ff, #ff914d);
         text-decoration: none;
-        color: black;
-        box-shadow: 0 7px 0 #FF9900;
+        color: white;
+        box-shadow: 0 7px 0 #c67700;
         border-radius: 20px;
         padding: 20px;
         user-select: none;
@@ -1310,7 +1310,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
 
         .betabutton:hover {
             position: relative;
-            box-shadow: 0 5px 0 #FF9900;
+            box-shadow: 0 5px 0 #c67700;
         }
 
             .betabutton:hover:active {
