--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -1926,6 +1926,13 @@ border: 1px solid rgba(255, 0, 0, 0.64);
             zoom: 150%;
         }*/
 
+        #settingsmainpane{
+                width:100vw;
+            }
+            #settingssidebar{
+                display:none;
+            }
+
 
         #clock {
             font-size: 90vw;
