--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -23,6 +23,7 @@
 <body>
     <div class="container">
         <div class="input-container">
+            <p style="font-family:'Dosis'; color:white;"><span class="betatag">Countdown Dashboard is in beta.</span></p>
             <input type="text" id="urlInput" placeholder="Enter URL">
             <button id="addButton">Add Link</button>
         </div>
@@ -482,5 +483,14 @@ iframe {
     box-shadow: none;
     transition: all 0.2s ease; /* Faster transition for more responsive feel */
 }
+
+.betatag {
+        background: linear-gradient(#8c52ff, #ff914d);
+        border-radius:20px;
+        padding:5px 10px 5px;
+        color:white;
+        font-size:20px;
+        margin-left:10px;
+    }
 </style>
 </html>
