--- a/mcacountdown/closedbeta_integratedschedule.html
+++ b/mcacountdown/closedbeta_integratedschedule.html
@@ -4491,6 +4491,6 @@ function savetodash() {
     // Save the updated links back to the cookie
     setCookie('dashboardsaved', JSON.stringify(links), 70);
 
-    window.open('https://michaeldors.com/mcacountdown/countdowndashboard.html', '_blank').focus();
+    window.open('https://michaeldors.com/mcacountdown/countdowndashboard.html', '_blank');
 }
 </script>
